2004-05-12  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-dock-item.c (bonobo_dock_item_add): Assert that we
	have no internal child.  Ref/sink the widget as the internal child
	to claim the base reference, so that it doesn't get owned by the
	floating window later.
	(bonobo_dock_item_remove): Assert that the internal child is the
	same as the bin's child.  Unref the internal child.
	(bonobo_dock_item_forall): Do nothing if the dock item is
	floating, as then the owner of the widgets is the window, not the
	item.
	(bonobo_dock_item_delete_event): Removed.
	(bonobo_dock_item_realize): Remove the "root_window" variable.
	(bonobo_dock_item_detach): Don't iterate through the children;
	operate on them by hand since we know which they are.  Don't
	resize the floating window by hand; it should be able to do that
	by itself.
	(bonobo_dock_item_unfloat): Assert that the floating window is
	mapped.  Don't resize the window to zero.  Operate on the children
	by hand, rather than iterating --- we'll have no children at this
	point, as the children belong to the floating window, so the
	gtk_container_get_children() will return an empty list!
	(struct _BonoboDockItemPrivate): Add a field "float_window_box".
	(bonobo_dock_item_detach): Store the priv->float_window_box rather
	than using a temporary variable.
	(bonobo_dock_item_realize): Don't install handlers for the
	floating window's size-request and size-allocate; let it handle
	those by itself.
	(bonobo_dock_item_attach): Check that we are floating before
	attempting to unfloat.

2004-05-10  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-dock-item.c (bonobo_dock_item_attach): Don't
	gtk_widget_reparent(), as that leaves widgets realized BUT
	un-anchored.  Use gtk_container_remove() and gtk_container_add()
	by hand.

2004-05-06  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-dock-item.c (bonobo_dock_item_realize): Don't
	initialize attributes unnecessarily.