@@ -1,3 +1,12 @@
+2004-05-17  Federico Mena Quintero  <federico@ximian.com>
+
+	* bonobo/bonobo-dock-item.c (bonobo_dock_item_unfloat): Don't set
+	the parent window of the children if we are not realized.
+	(bonobo_dock_item_unrealize): Unfloat if we are floating so that
+	we recover the grip and the child.
+	(bonobo_dock_item_detach): Do not size allocate the floating
+	window on our own; just let it do that by itself.
+
 2004-05-12  Federico Mena Quintero  <federico@ximian.com>
 
 	* bonobo/bonobo-dock-item.c (bonobo_dock_item_add): Assert that we
